[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kinova_controller"
version = "0.1.0"
description = "Code for controlling Kinova robots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
   "numpy",
   "multiprocess",
   "kortex-api @ https://artifactory.kinovaapps.com:443/artifactory/generic-public/kortex/API/2.6.0/kortex_api-2.6.0.post3-py3-none-any.whl",
   "scipy",
   "PyYAML",
   "rospkg"
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pybullet_helpers = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = [
    "venv/*",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
